--- a/app/pages/main.html
+++ b/app/pages/main.html
@@ -8,7 +8,13 @@
     </head>
     <body id="app">
         <div class="container">
-
+            <div class="flipster">
+                <ul></ul>
+            </div>
+            <div class="stats">
+                <p>{{statsOS.infoCPU}}</p>
+                <p>{{statsOS.freeRAM}}</p>
+            </div>
         </div>
         <script src="../js/main.js" /></script>
     </body>
